--- a/main.html
+++ b/main.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MY PORTFOLIO</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <img src="https://w0.peakpx.com/wallpaper/326/402/HD-wallpaper-baji-keisuke%E2%99%BE-tokyo-revengers-mikey-manga-anime-anime.jpg" alt="ME">
+    <h1>RITIK KUMAR SHEORAN</h1>
+    <p>
+        <a href="https://www.linkedin.com/feed/" target="_blank">linkedin</a>
+    </p>
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>HTML, CSS, JavaScript, Python, React</p>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Portfolio Website</li>
+            <li>Weather App</li>
+            <li>Task Manager</li>
+        </ul>
+    </section>
 
+    
 </body>
-
 </html>
